# BurnoutRisk

./: .gitignore  BurnoutRiskApp.pyproj  BurnoutRiskApp.slnx  README.md  app_facade.py  composition_root.py  main.py  pyproject.toml
application/: __init__.py
application/dto/: __init__.py  coach.py  education.py  report.py  safety.py  survey.py
application/ports/: __init__.py  repositories.py  security.py
application/services/: __init__.py  coach_service.py  education_service.py  report_service.py  survey_service.py
data/: .gitkeep  coach_actions.json  crisis_resources.json  education_content.json  questions.json
docs/: code_review_2026-06-10.md  crisis_resources_verification.md
domain/: __init__.py
domain/coaching/: __init__.py  actions.py  plan.py  trend.py
domain/common/: __init__.py  enums.py
domain/education/: __init__.py  content.py
domain/safety/: __init__.py  resources.py
domain/survey/: __init__.py  entities.py  results.py  scoring.py
infrastructure/: __init__.py  resources.py
infrastructure/crypto/: __init__.py  aes_gcm.py  key_store.py  pin.py  security_service.py
infrastructure/export/: __init__.py  csv_export.py
infrastructure/persistence/: __init__.py  coach_actions_loader.py  coach_repository.py  crisis_resources_loader.py  database.py  education_content_loader.py  education_repository.py  survey_definition_loader.py  survey_repository.py  wipe.py
presentation/: __init__.py  app.py  palette.py  theme.py
presentation/charts/: __init__.py  trend_chart.py
presentation/views/: __init__.py  base.py  coach.py  education.py  export.py  pin.py  placeholder.py  progress.py  result.py  survey.py  welcome.py
presentation/widgets/: __init__.py  safety_net.py
tests/application/: test_app_facade.py  test_coach_config_dto.py  test_dto_survey.py  test_pin_gating.py  (+2 more)
(+36 files in other folders)
