[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "burnout-risk-monitor"
version = "0.1.0"
description = "Lokalne, offline-first narzedzie edukacyjne do oceny ryzyka wypalenia zawodowego"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Zaleznosci runtime (spec - stos technologiczny):
#   pydantic       - walidacja DTO i danych statycznych
#   argon2-cffi    - KDF dla PIN (Argon2id)
#   keyring        - magazyn klucza szyfrujacego (systemowy)
#   matplotlib     - wykresy trendu osadzone w tkinter
#   sv-ttk         - opcjonalny motyw (graceful fallback do ttk przy braku)
# tkinter i sqlite3 sa w bibliotece standardowej - nie sa tu wymieniane.
dependencies = [
    "pydantic>=2",
    "argon2-cffi>=23",
    "keyring>=24",
    "matplotlib>=3.8",
    "sv-ttk>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.setuptools]
# Layout plaski: pakiety warstw lezą w korzeniu repozytorium.
packages = [
    "domain",
    "domain.common",
    "domain.survey",
    "domain.coaching",
    "domain.education",
    "application",
    "application.services",
    "application.ports",
    "application.dto",
    "infrastructure",
    "infrastructure.persistence",
    "infrastructure.crypto",
    "infrastructure.export",
    "presentation",
    "presentation.views",
    "presentation.widgets",
    "presentation.charts",
]
py-modules = ["main", "composition_root", "app_facade"]

[tool.pytest.ini_options]
# Korzen repo na sciezce importu - testy importuja warstwy bezposrednio
# (np. `from domain.common import RiskBand`).
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
